# atomistics

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.ci_support/: build_notebooks.sh  check.py  condamerge.py  environment-abinit.yml  environment-coverage.yml  environment-cp2k.yml  environment-docs.yml  environment-gpaw.yml  environment-grace.yml  environment-lammps.yml  environment-mace.yml  environment-matgl.yml  environment-mini.yml  environment-mpich.yml  environment-notebooks.yml  environment-old.yml  environment-openmpi.yml  environment-orb.yml  environment-qe.yml  environment-siesta.yml  environment-sphinx.yml  environment-uma.yml  environment.yml  release.py
.github/workflows/: UpdateDependabotPR.yml  actions_tests_and_coverage.yml  automerge.yml  black.yml  coverage.yml  dependabot.yml  deploy.yml  minimal.yml  notebooks.yml  pipeline.yml  pypicheck.yml  unittests-cp2k.yml  unittests-mpich.yml  unittests-openmpi.yml  unittests.yml  unittests_abinit.yml  unittests_gpaw.yml  unittests_lammps.yml  unittests_mace.yml  unittests_matgl.yml  unittests_old.yml  unittests_qe.yml  unittests_siesta.yml
atomistics/: __init__.py  _tests.py  _version.py
atomistics/calculators/: __init__.py  ase.py  einstein.py  hessian.py  interface.py  lammps.py  lammps_potentials.py  output.py  qe.py  sphinxdft.py  vasp.py  wrapper.py
atomistics/calculators/abinit_ase/: calculator.py
atomistics/calculators/ase_interface/: calculator.py
atomistics/calculators/cp2k_ase/: calculator.py
atomistics/calculators/emt_ase/: calculator.py
atomistics/calculators/gpaw_ase/: calculator.py
atomistics/calculators/lammps/: __init__.py  calculator.py  commands.py  filecalculator.py  helpers.py  libcalculator.py  output.py  phonon.py  potential.py
atomistics/calculators/lammps_library/: calculator.py  potential.py
atomistics/calculators/quantumespresso_ase/: calculator.py
atomistics/elastic/: calculator.py
atomistics/evcurve/: calculator.py  fit.py
atomistics/phonons/: calculator.py  helper.py  units.py
atomistics/quasiharmonic/: calculator.py
atomistics/referencedata/: __init__.py  mendeleevdb.py  wiki.py  wikipedia.py  wolfram.py  wolframalpha.py
atomistics/shared/: calculator.py  generic.py  import_warning.py  output.py  parallel.py  thermal_expansion.py  tqdm_iterator.py
atomistics/shared/thermo/: debye.py  thermalexpansion.py
atomistics/thermo/: debye.py  thermo.py
atomistics/workflows/: __init__.py  conductivity.py  interface.py  langevin.py  molecular_dynamics.py  quasiharmonic.py  structure_optimization.py
atomistics/workflows/assyst/: flattened_storage.py  random.py  spg.py  structure_storage.py  util.py
atomistics/workflows/elastic/: elastic_moduli.py  helper.py  material.py  symmetry.py  workflow.py
atomistics/workflows/evcurve/: debye.py  fit.py  helper.py  thermo.py  workflow.py
atomistics/workflows/langevin/: workflow.py
atomistics/workflows/molecular_dynamics/: workflow.py
atomistics/workflows/phonons/: helper.py  units.py  workflow.py
binder/: environment.yml  postBuild
docs/: _config.yml  _toc.yml  api.rst  installation.md  materialproperties.md  phasediagram.md  simulationcodes.md  workflows.md
docs/source/: conf.py  index.rst  installation.md  materialproperties.md  simulationcodes.md  workflows.md
notebooks/: approximate_melting_point_calculation.ipynb  bulk_modulus_with_gpaw.ipynb  elastic_constants.ipynb  energy_volume_curve.ipynb  free_energy_calculation.ipynb  lammps_workflows.ipynb  phonons.ipynb  quasi_harmonic_approximation.ipynb  simulation_codes.ipynb  thermal_expansion_with_lammps.ipynb
opt_cell_task/: INCAR
opt_pos_and_vol_task/: INCAR
opt_pos_task/: INCAR
opt_vol_task/: INCAR  POSCAR
pyiron_lammps/: __init__.py  _version.py  calculation.py  constraints.py  debye.py  decorator.py  elastic.py  evcurve.py  evcurve_fit.py  helpers.py  parallel.py  potential.py  sqs.py  thermo.py  wrapper.py
pyiron_lammps/helpers/: elastic.py
pyiron_lammps/lammps/: potential.py  wrapper.py
pyiron_lammps/masters/: elastic.py
pyiron_lammps/sqs/: generator.py
pyiron_lammps/state/: settings.py
pyiron_lammps/structure/: _visualize.py  analyse.py  atom.py  atoms.py  neighbors.py  periodic_table.py  pyscal.py  sparse_list.py  strain.py  symmetry.py
spec/: README.md
src/atomistics/: __init__.py  _version.py
tests/: available_evaluators.py  emt_helper.py  test_abstract_workflow_class.py  test_ase_md_emt.py  test_ase_md_matgl.py  test_calc_stress_ase_emt.py  test_calc_stress_lammps.py  test_calc_stress_lammpslib.py  test_constraints.py  test_debye_model.py  test_elastic.py  test_elastic_ase_emt.py  test_elastic_ase_gpaw.py  test_elastic_base.py  test_elastic_constants.py  test_elastic_cp2k.py  test_elastic_emt.py  test_elastic_gpaw.py  test_elastic_helper.py  test_elastic_lammps.py  test_elastic_lammps_functional.py  test_elastic_lammpslib.py  test_elastic_lammpslib_class.py  test_elastic_lammpslib_functional.py  test_elastic_parallel_single_core.py  test_elastic_parallel_two_cores.py  test_elastic_qe.py  test_elastic_workflow_helper.py  test_ev_curve.py  test_evcurve.py  test_evcurve_abinit.py  test_evcurve_ase_abinit.py  test_evcurve_ase_emt.py  test_evcurve_ase_gpaw.py  test_evcurve_ase_lammps.py  test_evcurve_ase_mace.py  test_evcurve_ase_matgl.py  test_evcurve_ase_qe.py  test_evcurve_ase_siesta.py  test_evcurve_base.py  (+73 more)
tests/static/: potentials_lammps.csv
tests/static/vasp/: OUTCAR
tests/test_ase_interface/: test_ase_md_mace.py  test_ase_md_matgl.py  test_elastic_ase_gpaw.py  test_evcurve_ase_abinit.py  test_evcurve_ase_gpaw.py  test_evcurve_ase_grace.py  test_evcurve_ase_mace.py  test_evcurve_ase_matgl.py  test_evcurve_ase_orb.py  test_evcurve_ase_qe.py  test_evcurve_ase_siesta.py  test_evcurve_ase_uma.py  test_phonons_ase_gpaw.py  test_phonons_ase_grace.py  test_phonons_ase_mace.py  test_phonons_ase_matgl.py  test_quasiharmonic_ase_mace.py  test_quasiharmonic_ase_matgl.py
(+50 files in other folders)
