[build-system]
requires = ["ase", "numpy", "scipy", "setuptools", "spglib", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "atomistics"
description = "Interfaces for atomistic simulation codes and workflows"
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ase==3.24.0",
    "numpy==1.26.4",
    "scipy==1.15.1",
    "spglib==2.5.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/atomistics"
Documentation = "https://atomistics.readthedocs.io"
Repository = "https://github.com/pyiron/atomistics"

[project.optional-dependencies]
phonopy = [
    "phonopy==2.34.0",
    "seekpath==2.1.0",
    "structuretoolkit==0.0.29",
]
gpaw = [
    "gpaw==24.6.0",
]
lammps = [
    "pylammpsmpi==0.2.26",
    "jinja2==3.1.5",
    "pandas==2.2.3",
]
lammps_phonons = [
    "pylammpsmpi==0.2.26",
    "jinja2==3.1.5",
    "pandas==2.2.3",
    "dynaphopy==1.17.16",
]
experimental = [
    "lxml==5.3.0",
    "mendeleev==0.19.0",
    "pandas==2.2.3",
    "requests==2.32.3",
]
qe = [
    "pwtools==1.2.3"
]
tqdm = [
    "tqdm==4.67.1"
]

[tool.setuptools.packages.find]
include = ["atomistics*"]

[tool.setuptools.dynamic]
version = {attr = "atomistics.__version__"}

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "atomistics/_version.py"
parentdir_prefix = "atomistics"
tag_prefix = "atomistics-"
