[build-system]
requires = ["ase", "numpy", "scipy", "setuptools", "spglib", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "atomistics"
description = "Interfaces for atomistic simulation codes and workflows"
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ase==3.25.0",
    "numpy==1.26.4",
    "scipy==1.15.2",
    "spglib==2.6.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/atomistics"
Documentation = "https://atomistics.readthedocs.io"
Repository = "https://github.com/pyiron/atomistics"

[project.optional-dependencies]
phonopy = [
    "phonopy==2.38.0",
    "seekpath==2.1.0",
    "structuretoolkit==0.0.32",
]
gpaw = [
    "gpaw==24.6.0",
]
lammps = [
    "pylammpsmpi==0.2.32",
    "jinja2==3.1.6",
    "pandas==2.2.3",
    "pyiron_lammps==0.4.1",
]
lammps_phonons = [
    "pylammpsmpi==0.2.32",
    "jinja2==3.1.6",
    "pandas==2.2.3",
    "dynaphopy==1.17.16",
    "pyiron_lammps==0.4.1",
]
experimental = [
    "lxml==5.3.2",
    "mendeleev==0.19.0",
    "pandas==2.2.3",
    "requests==2.32.3",
]
sphinxdft = [
    "sphinx-parser==0.0.1"
]
qe = [
    "pwtools==1.3.0"
]
tqdm = [
    "tqdm==4.67.1"
]
vasp = [
    "pyiron_vasp==0.2.5"
]

[tool.setuptools.packages.find]
include = ["atomistics*"]

[tool.setuptools.dynamic]
version = {attr = "atomistics.__version__"}

[tool.ruff]
exclude = [".ci_support", "docs", "notebooks", "tests", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore function call in argument defaults
    "B008",
    # ignore cache
    "B019",
    # ignore star-arg unpacking after a keyword argument
    "B026",
    # ignore line-length violations
    "E501",
    # Too many arguments in function definition
    "PLR0913",
    # Magic value used in comparison
    "PLR2004",
    # Too many statements
    "PLR0915",
    # ignore overwritten variables in for-loop
    "PLW2901",
    # ignore key in type
    "SIM118",
]

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "atomistics/_version.py"
parentdir_prefix = "atomistics"
tag_prefix = "atomistics-"
